--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
 .dropdown {
   @apply absolute mt-3 bg-white rounded-2xl shadow-xl p-4 w-64 z-50;
 }
-
+.dropdown-mobile {
+  @apply static mt-0 bg-white rounded-xl p-0 w-full shadow-none;
+}
 .counter-btn {
   @apply w-8 h-8 border border-gray-400 rounded-full flex items-center justify-center hover:border-gray-600;
 }
@@ -22,7 +24,9 @@
 strong{
   @apply text-sky-700
 }
-
+.z-60{
+  z-index: 60;
+}
 .btn-bg-primery{
   background-color: #FFC299;
 }
