--- a/src/App.css
+++ b/src/App.css
@@ -233,11 +233,11 @@ nav {
 /* MOBILE OVERRIDES */
 @media (max-width: 768px) {
   .hero-nav-left {
-  inset: 44% auto 0% -5px;
+  inset: 55vh auto 0% -5px;
 }
 
 .hero-nav-right {
-  inset: 44% -5px 0% auto;
+  inset: 55vh -5px 0% auto;
 }
 
 }
